Completed Code Assessment

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div class="mat-typography" fxLayout="column" fxFlex fxFill>
+<comments currentUserId="1"></comments>
+
+<!-- <div class="mat-typography" fxLayout="column" fxFlex fxFill>
   <div fxLayout="column" fxLayoutAlign="center center" fxFlex fxFill *ngIf="! posts">
-    No posts.
   </div>
 
   <div fxLayout="row wrap" fxLayoutAlign="start start" fxLayoutGap="1em" *ngIf="posts" class="page">
@@ -33,4 +34,4 @@
 
     <img src="assets/img/lidp.svg" alt="LIDP Logo">
   </span>
-</div>
+</div> -->
